# loan-applications

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.sh  start.sh  stop.sh
app/: config.py  database.py  logging_config.py  main.py  sync_database.py
app/api/: dependencies.py
app/api/v1/endpoints/: client_verification.py  enums.py  loan_applications.py  router.py
app/models/: __init__.py  base.py  client_verification.py  enums.py  loan_application.py
app/schemas/: __init__.py  client_verification.py  enums.py  loan_application.py
app/services/: __init__.py  client_verification.py  loan_application.py  workflow.py
app/utils/: caching.py  enums.py  http_client.py  logging.py
app/workers/: celery_app.py  tasks.py
migrations/: env.py
scripts/: check_enum_count.py  init-db.sh.bac  init_db.py  seed_enums.py  wait_for_db.py
tests/: conftest.py  test_health.py
