[tool.poetry]
name = "loan-approval-system"
version = "1.0.0"
description = "Loan Approval System"
authors = ["Jiri Oujezdsky <email@mailer.cc>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
celery = "^5.3.4"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.1"
python-dotenv = "^1.0.0"
email-validator = "^2.1.0"
tenacity = "^8.2.3"
pytesseract = "^0.3.10"
pypdf2 = "^3.0.1"
bleach = "^6.1.0"
jinja2 = "^3.1.2"
twilio = "^8.13.0"
httpx = "^0.25.2"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
mypy = "^1.7.1"
# TODO
# [tool.poetry.scripts]
# app = "app.main:main"
# worker = "app.workers.celery_app:start_worker"
# migrate = "app.database:run_migrations"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3